--- a/source/index.html
+++ b/source/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <title>Барбершоп «Бородинский»</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="css/style.min.css">
-</head>
-<body class="page__body">
-
-<script src="js/script.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>Интернет-магазин кофейных напитков Drink2Go</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="css/style.min.css">
+  </head>
+  <body>
+    <script src="js/script.js"></script>
+  </body>
 </html>
