--- a/source/index.html
+++ b/source/index.html
@@ -256,12 +256,12 @@
 
                     <ul class="filter__range-inputs">
                       <li class="filter__range-input filter__range-input--min">
-                        <input id="min-price" type="number" name="min-price" min="0" max="990" placeholder="0">
+                        <input id="min-price" type="number" name="min-price" min="0" max="990" step="1" placeholder="0" disabled>
                         <label class="visually-hidden" for="min-price">Установите минимальную цену</label>
                       </li>
 
                       <li class="filter__range-input filter__range-input--max">
-                        <input id="max-price" type="number" name="max-price" min="10" max="1000" value="900">
+                        <input id="max-price" type="number" name="max-price" min="10" max="1000" step="1" value="900">
                         <label class="visually-hidden" for="max-price">Установите максимальную цену</label>
                       </li>
                     </ul>
